--- a/components/certifications.html
+++ b/components/certifications.html
@@ -1,49 +1,61 @@
 <section id="certifications" class="certifications-section">
     <h2 class="certifications-title">Certifications</h2>
     <div class="certifications-container">
+
         <!--Deep Learning Specialization-->
         <div class="certification-item">
             <div class="certification-header">
                 <img src="./assets/dl.png" alt="Deep Learning" class="cert-icon" />
-                <h3><a href="#" class="cert-link">Deep Learning Specialization</a></h3>
+                <h3><a href="https://www.credly.com/badges/e826ce3a-b007-4747-a9bb-5c902dae570a/public_url"
+                        class="cert-link">Deep Learning Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> DeepLearning.AI & Coursera</p>
             <p><strong>Date:</strong> 02/2025</p>
             <div class="sub-certifications">
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Neural Networks and Deep Learning</a></h4>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/OP1J6B7VN46H"
+                            class="subcert-link">Neural Networks and Deep Learning</a></h4>
                 </div>
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Improving Deep Neural Networks</a></h4>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/68RYW4TDSMA7"
+                            class="subcert-link">Improving Deep Neural Networks</a></h4>
                 </div>
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Structuring Machine Learning Projects</a></h4>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/7VTT8JT5XGXT"
+                            class="subcert-link">Structuring Machine Learning Projects</a></h4>
                 </div>
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Convolutional Neural Networks</a></h4>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/J8NSA8RI1SP4"
+                            class="subcert-link">Convolutional Neural Networks</a></h4>
                 </div>
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Sequence Models</a></h4>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/TRK4E3YAUFWA"
+                            class="subcert-link">Sequence Models</a></h4>
                 </div>
             </div>
         </div>
+
         <!--Machine Learning Specialization-->
         <div class="certification-item">
             <div class="certification-header">
                 <img src="./assets/stan.png" alt="Machine Learning" class="cert-icon" />
-                <h3><a href="#" class="cert-link">Machine Learning Specialization</a></h3>
+                <h3><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/6ZDT66ZHUT7T"
+                        class="cert-link">Machine Learning Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> Stanford Online & Coursera</p>
             <p><strong>Date:</strong> 10/2024</p>
             <div class="sub-certifications">
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Supervised Machine Learning</a></h4>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/7EC1FKUV8ZZY"
+                            class="subcert-link">Supervised Machine Learning: Regression and Classification</a></h4>
                 </div>
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Advanced Learning Algorithms</a></h4>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/verify/ZNFZENOQ4I0A"
+                            class="subcert-link">Advanced Learning Algorithms</a></h4>
                 </div>
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Unsupervised Learning, Recommender, Reinforcement Learning</a>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/A7ND7WMFZUMP"
+                            class="subcert-link">Unsupervised Learning, Recommender, Reinforcement Learning</a>
                     </h4>
                 </div>
             </div>
@@ -53,23 +65,29 @@
         <div class="certification-item">
             <div class="certification-header">
                 <img src="./assets/dl.png" alt="NLP Specialization" class="cert-icon" />
-                <h3><a href="#" class="cert-link">Natural Language Processing Specialization</a></h3>
+                <h3><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/Y9BSDFU1NWH4"
+                        class="cert-link">Natural Language Processing Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> DeepLearning.AI & Coursera</p>
             <p><strong>Date:</strong> 10/2024</p>
             <div class="sub-certifications">
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Classification & Vector Spaces</a></h4>
-                </div>
-                <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Probabilistic Models</a></h4>
-                </div>
-                <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Sequence Models</a>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/verify/J0LKN35ZUFM2"
+                            class="subcert-link">Natural Language Processing With Classification & Vector Spaces</a>
                     </h4>
                 </div>
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Attention Models</a>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/QSYN2VP4JSVX"
+                            class="subcert-link">Natural Language Processing With Probabilistic Models</a></h4>
+                </div>
+                <div class="sub-cert-item">
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/TRK4E3YAUFWA"
+                            class="subcert-link">Natural Language Processing With Sequence Models</a>
+                    </h4>
+                </div>
+                <div class="sub-cert-item">
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/XPYYUG2QVB2Q"
+                            class="subcert-link">Natural Language Processing With Attention Models</a>
                     </h4>
                 </div>
             </div>
@@ -78,52 +96,59 @@
         <!--Mathematics for Machine Learning-->
         <div class="certification-item">
             <div class="certification-header">
-                <img src="./assets/icl.png" alt="Mathematics for Machine Learning Specialization"
-                    class="cert-icon" />
-                <h3><a href="#" class="cert-link">Mathematics for Machine Learning Specialization</a></h3>
+                <img src="./assets/icl.png" alt="Mathematics for Machine Learning Specialization" class="cert-icon" />
+                <h3><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/0NE9K2AIJGMA"
+                        class="cert-link">Mathematics for Machine Learning Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> Imperial College London & Coursera</p>
             <p><strong>Date:</strong> 10/2024</p>
             <div class="sub-certifications">
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Linear Algebra</a></h4>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/CR5B860QKFM2"
+                            class="subcert-link">Linear Algebra</a></h4>
                 </div>
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">Multivariate Calculus</a></h4>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/5J6L4I9WS1RP"
+                            class="subcert-link">Multivariate Calculus</a></h4>
                 </div>
                 <div class="sub-cert-item">
-                    <h4><a href="#" class="subcert-link">PCA</a>
+                    <h4><a href="https://www.coursera.org/account/accomplishments/certificate/U4NQLGUWJO8Y"
+                            class="subcert-link">PCA</a>
                     </h4>
                 </div>
             </div>
         </div>
 
+        <!--Quera Data Analysis-->
         <div class="certification-item">
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Data Analysis" class="cert-icon" />
-                <h3><a href="#" class="cert-link">Task-Oriented Course in Data Analysis With Python</a></h3>
+                <h3><a href="https://quera.org/media/public/quera_certificate/a8ae39534fda4c759b9a69e55bf03fa5.jpg"
+                        class="cert-link">Task-Oriented Course in Data Analysis With Python</a></h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 09/2024</p>
-        </div>  
+        </div>
 
 
-        <!--Django-->
+        <!--Quera Django-->
         <div class="certification-item">
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Django" class="cert-icon" />
-                <h3><a href="#" class="cert-link">Professional Project-Oriented Course In Backend Development With
+                <h3><a href="https://quera.org/media/public/quera_certificate/26944e5f8c594b53936cf44d51dd2a34.jpg"
+                        class="cert-link">Professional Project-Oriented Course In Backend Development With
                         Django</a></h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 02/2024</p>
         </div>
 
-        <!--Git & Control Version-->
+        <!--Quera Git & Control Version-->
         <div class="certification-item">
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Git" class="cert-icon" />
-                <h3><a href="#" class="cert-link">Task-Oriented Course in Version Control With Git</a></h3>
+                <h3><a href="https://quera.org/media/public/quera_certificate/0c7bc0856f2a4e5e8d780753021d8cf9.jpg"
+                        class="cert-link">Task-Oriented Course in Version Control With Git</a></h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 07/2023</p>
@@ -198,11 +223,6 @@
         margin-bottom: 10px;
     }
 
-    .cert-icon {
-        width: 10px;
-        height: 10px;
-        object-fit: contain;
-    }
 
     .cert-icon {
         width: 80px;
