--- a/components/profile.html
+++ b/components/profile.html
@@ -3,9 +3,9 @@
     <img src="./assets/profile-pic.png" alt="Hossein Tahami profile picture" />
   </div>
   <div class="section__text">
-    <p class="section__text__p1">Hello, I'm</p>
-    <h1 class="title">Hossein Tahami</h1>
-    <p class="section__text__p2">Python Developer</p>
+    <p class="section__text__p1 typing-animation">Hello, I'm</p>
+    <h1 class="title typing-animation-delay">Hossein Tahami</h1>
+    <p class="section__text__p2 typing-animation-delay-2">Python Developer</p>
     <div class="btn-container">
       <button
         class="btn btn-color-2"
@@ -32,3 +32,26 @@
     </div>
   </div>
 </section>
+
+<style>
+
+.typing-animation-delay {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid;
+  animation: typing 2s steps(20, end) 1s, blink-caret 0.75s step-end infinite;
+  animation-fill-mode: both;
+}
+
+
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #000 }
+}
+</style>
