--- a/components/certifications.html
+++ b/components/certifications.html
@@ -1,7 +1,6 @@
 <section id="certifications" class="certifications-section">
     <h2 class="certifications-title">Certifications</h2>
     <div class="certifications-container">
-
         <!--Deep Learning Specialization-->
         <div class="certification-item">
             <div class="certification-header">
@@ -34,7 +33,6 @@
                 </div>
             </div>
         </div>
-
         <!--Machine Learning Specialization-->
         <div class="certification-item">
             <div class="certification-header">
@@ -55,12 +53,10 @@
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/A7ND7WMFZUMP"
-                            class="subcert-link">Unsupervised Learning, Recommender, Reinforcement Learning</a>
-                    </h4>
+                            class="subcert-link">Unsupervised Learning, Recommender, Reinforcement Learning</a></h4>
                 </div>
             </div>
         </div>
-
         <!--Natural Language Processing-->
         <div class="certification-item">
             <div class="certification-header">
@@ -82,17 +78,14 @@
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/TRK4E3YAUFWA"
-                            class="subcert-link">Natural Language Processing With Sequence Models</a>
-                    </h4>
+                            class="subcert-link">Natural Language Processing With Sequence Models</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/XPYYUG2QVB2Q"
-                            class="subcert-link">Natural Language Processing With Attention Models</a>
-                    </h4>
+                            class="subcert-link">Natural Language Processing With Attention Models</a></h4>
                 </div>
             </div>
         </div>
-
         <!--Mathematics for Machine Learning-->
         <div class="certification-item">
             <div class="certification-header">
@@ -113,12 +106,10 @@
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/U4NQLGUWJO8Y"
-                            class="subcert-link">PCA</a>
-                    </h4>
+                            class="subcert-link">PCA</a></h4>
                 </div>
             </div>
         </div>
-
         <!--Quera Data Analysis-->
         <div class="certification-item">
             <div class="certification-header">
@@ -129,20 +120,17 @@
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 09/2024</p>
         </div>
-
-
         <!--Quera Django-->
         <div class="certification-item">
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Django" class="cert-icon" />
                 <h3><a href="https://quera.org/media/public/quera_certificate/26944e5f8c594b53936cf44d51dd2a34.jpg"
-                        class="cert-link">Professional Project-Oriented Course In Backend Development With
-                        Django</a></h3>
+                        class="cert-link">Professional Project-Oriented Course In Backend Development With Django</a>
+                </h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 02/2024</p>
         </div>
-
         <!--Quera Git & Control Version-->
         <div class="certification-item">
             <div class="certification-header">
@@ -153,7 +141,6 @@
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 07/2023</p>
         </div>
-
         <!--MATLAB-->
         <div class="certification-item">
             <div class="certification-header">
@@ -163,7 +150,6 @@
             <p><strong>Institution:</strong> Tehran Institute of Technology</p>
             <p><strong>Date:</strong> 04/2023</p>
         </div>
-
         <!--CATIA-->
         <div class="certification-item">
             <div class="certification-header">
@@ -173,9 +159,6 @@
             <p><strong>Institution:</strong> Tehran Institute of Technology</p>
             <p><strong>Date:</strong> 04/2023</p>
         </div>
-
-
-
     </div>
 </section>
 
@@ -222,7 +205,6 @@
         gap: 10px;
         margin-bottom: 10px;
     }
-
 
     .cert-icon {
         width: 80px;
