Update certifications Layout

--- a/components/certifications.html
+++ b/components/certifications.html
@@ -1,8 +1,9 @@
 <section id="certifications" class="certifications-section">
-    <h2 class="certifications-title">Certifications</h2>
+    <p class="section__text__p1">Look at my</p>
+    <h1 class="title">Certifications</h1>
     <div class="certifications-container">
         <!--Deep Learning Specialization-->
-        <div class="certification-item">
+        <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/dl.png" alt="Deep Learning" class="cert-icon" />
                 <h3><a href="https://www.credly.com/badges/e826ce3a-b007-4747-a9bb-5c902dae570a/public_url"
@@ -34,7 +35,7 @@
             </div>
         </div>
         <!--Machine Learning Specialization-->
-        <div class="certification-item">
+        <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/stan.png" alt="Machine Learning" class="cert-icon" />
                 <h3><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/6ZDT66ZHUT7T"
@@ -58,7 +59,7 @@
             </div>
         </div>
         <!--Natural Language Processing-->
-        <div class="certification-item">
+        <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/dl.png" alt="NLP Specialization" class="cert-icon" />
                 <h3><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/Y9BSDFU1NWH4"
@@ -87,7 +88,7 @@
             </div>
         </div>
         <!--Mathematics for Machine Learning-->
-        <div class="certification-item">
+        <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/icl.png" alt="Mathematics for Machine Learning Specialization" class="cert-icon" />
                 <h3><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/0NE9K2AIJGMA"
@@ -111,7 +112,7 @@
             </div>
         </div>
         <!--Quera Data Analysis-->
-        <div class="certification-item">
+        <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Data Analysis" class="cert-icon" />
                 <h3><a href="https://quera.org/media/public/quera_certificate/a8ae39534fda4c759b9a69e55bf03fa5.jpg"
@@ -120,8 +121,9 @@
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 09/2024</p>
         </div>
+
         <!--Quera Django-->
-        <div class="certification-item">
+        <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Django" class="cert-icon" />
                 <h3><a href="https://quera.org/media/public/quera_certificate/26944e5f8c594b53936cf44d51dd2a34.jpg"
@@ -131,8 +133,9 @@
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 02/2024</p>
         </div>
+
         <!--Quera Git & Control Version-->
-        <div class="certification-item">
+        <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Git" class="cert-icon" />
                 <h3><a href="https://quera.org/media/public/quera_certificate/0c7bc0856f2a4e5e8d780753021d8cf9.jpg"
@@ -141,8 +144,10 @@
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 07/2023</p>
         </div>
+
+
         <!--MATLAB-->
-        <div class="certification-item">
+        <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/tit.png" alt="MATLAB" class="cert-icon" />
                 <h3><a href="#" class="cert-link">MATLAB Certification</a></h3>
@@ -150,8 +155,10 @@
             <p><strong>Institution:</strong> Tehran Institute of Technology</p>
             <p><strong>Date:</strong> 04/2023</p>
         </div>
+
+
         <!--CATIA-->
-        <div class="certification-item">
+        <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/tit.png" alt="CATIA" class="cert-icon" />
                 <h3><a href="#" class="cert-link">CATIA Certification</a></h3>
@@ -163,18 +170,12 @@
 </section>
 
 <style>
-    .certifications-section {
-        text-align: center;
-        padding: 40px;
-        background-color: #f9f9f9;
-        border-radius: 10px;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    }
+
 
     .certifications-title {
-        font-size: 2rem;
+        font-size: 2.5rem;
         color: #333;
-        margin-bottom: 20px;
+        margin-bottom: 60px;
     }
 
     .certifications-container {
