--- a/components/projects.html
+++ b/components/projects.html
@@ -19,12 +19,6 @@
           >
             Github
           </button>
-          <button
-            class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/'"
-          >
-            Live Demo
-          </button>
         </div>
       </div>
       <div class="details-container color-container">
@@ -43,12 +37,6 @@
           >
             Github
           </button>
-          <button
-            class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/'"
-          >
-            Live Demo
-          </button>
         </div>
       </div>
       <div class="details-container color-container">
@@ -63,15 +51,9 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/HosseinTahami/Cafena'"
           >
             Github
-          </button>
-          <button
-            class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/'"
-          >
-            Live Demo
           </button>
         </div>
       </div>
