--- a/components/about.html
+++ b/components/about.html
@@ -7,15 +7,20 @@
     </div>
     <div class="about-details-container">
       <div class="about-containers">
-        <div class="details-container">
+        <!-- <div class="details-container">
           <img src="./assets/certifications.png" alt="certifications icon" class="icon" />
           <h3>certifications</h3>
           <p>2+ years <br />Python Development</p>
-        </div>
+        </div> -->
         <div class="details-container">
-          <img src="./assets/education.png" alt="Education icon" class="icon" />
+          <img src="./assets/aut.png" alt="AUT icon" class="icon" style="width: 100px; height: 100px;" />
           <h3>Education</h3>
-          <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+          <p>
+            B.Sc. in Aerospace Engineering from
+            <a href="https://aut.ac.ir/index.php?sid=1&slc_lang=en" style="color: blue;">Amirkabir University of Technology (Tehran
+              Polytechnic)</a>.
+          </p>
+
         </div>
       </div>
       <div class="text-container">
