--- a/components/projects.html
+++ b/components/projects.html
@@ -15,8 +15,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/'"
-          >
+            onclick="window.open('https://github.com/HosseinTahami/Handwritten-Digit-Recognition', '_blank')">
             Github
           </button>
         </div>
@@ -33,7 +32,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/'"
+            onclick="window.open('https://github.com/HosseinTahami/Tweet-Sentiment-Analysis-With-Logistic-Regression', '_blank')"
           >
             Github
           </button>
@@ -51,7 +50,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/HosseinTahami/Cafena'"
+            onclick="window.open('https://github.com/HosseinTahami/Cafena', '_blank')"
           >
             Github
           </button>
