--- a/components/certifications.html
+++ b/components/certifications.html
@@ -7,30 +7,30 @@
             <div class="certification-header">
                 <img src="./assets/dl.png" alt="Deep Learning" class="cert-icon" />
                 <h3><a href="https://www.credly.com/badges/e826ce3a-b007-4747-a9bb-5c902dae570a/public_url"
-                        class="cert-link">Deep Learning Specialization</a></h3>
+                        class="cert-link" target="_blank">Deep Learning Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> DeepLearning.AI & Coursera</p>
             <p><strong>Date:</strong> 02/2025</p>
             <div class="sub-certifications">
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/OP1J6B7VN46H"
-                            class="subcert-link">Neural Networks and Deep Learning</a></h4>
+                            class="subcert-link" target="_blank">Neural Networks and Deep Learning</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/68RYW4TDSMA7"
-                            class="subcert-link">Improving Deep Neural Networks</a></h4>
+                            class="subcert-link" target="_blank">Improving Deep Neural Networks</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/7VTT8JT5XGXT"
-                            class="subcert-link">Structuring Machine Learning Projects</a></h4>
+                            class="subcert-link" target="_blank">Structuring Machine Learning Projects</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/J8NSA8RI1SP4"
-                            class="subcert-link">Convolutional Neural Networks</a></h4>
+                            class="subcert-link" target="_blank">Convolutional Neural Networks</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/TRK4E3YAUFWA"
-                            class="subcert-link">Sequence Models</a></h4>
+                            class="subcert-link" target="_blank">Sequence Models</a></h4>
                 </div>
             </div>
         </div>
@@ -39,22 +39,24 @@
             <div class="certification-header">
                 <img src="./assets/stan.png" alt="Machine Learning" class="cert-icon" />
                 <h3><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/6ZDT66ZHUT7T"
-                        class="cert-link">Machine Learning Specialization</a></h3>
+                        class="cert-link" target="_blank">Machine Learning Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> Stanford Online & Coursera</p>
             <p><strong>Date:</strong> 10/2024</p>
             <div class="sub-certifications">
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/7EC1FKUV8ZZY"
-                            class="subcert-link">Supervised Machine Learning: Regression and Classification</a></h4>
+                            class="subcert-link" target="_blank">Supervised Machine Learning: Regression and
+                            Classification</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/verify/ZNFZENOQ4I0A"
-                            class="subcert-link">Advanced Learning Algorithms</a></h4>
+                            class="subcert-link" target="_blank">Advanced Learning Algorithms</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/A7ND7WMFZUMP"
-                            class="subcert-link">Unsupervised Learning, Recommender, Reinforcement Learning</a></h4>
+                            class="subcert-link" target="_blank">Unsupervised Learning, Recommender, Reinforcement
+                            Learning</a></h4>
                 </div>
             </div>
         </div>
@@ -63,27 +65,30 @@
             <div class="certification-header">
                 <img src="./assets/dl.png" alt="NLP Specialization" class="cert-icon" />
                 <h3><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/Y9BSDFU1NWH4"
-                        class="cert-link">Natural Language Processing Specialization</a></h3>
+                        target="_blank" class="cert-link">Natural Language Processing Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> DeepLearning.AI & Coursera</p>
             <p><strong>Date:</strong> 11/2024</p>
             <div class="sub-certifications">
                 <div class="sub-cert-item">
-                    <h4><a href="https://www.coursera.org/account/accomplishments/verify/J0LKN35ZUFM2"
+                    <h4><a href="https://www.coursera.org/account/accomplishments/verify/J0LKN35ZUFM2" target="_blank"
                             class="subcert-link">Natural Language Processing With Classification & Vector Spaces</a>
                     </h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/QSYN2VP4JSVX"
-                            class="subcert-link">Natural Language Processing With Probabilistic Models</a></h4>
+                            target="_blank" class="subcert-link">Natural Language Processing With Probabilistic
+                            Models</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/TRK4E3YAUFWA"
-                            class="subcert-link">Natural Language Processing With Sequence Models</a></h4>
+                            target="_blank" class="subcert-link">Natural Language Processing With Sequence Models</a>
+                    </h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/XPYYUG2QVB2Q"
-                            class="subcert-link">Natural Language Processing With Attention Models</a></h4>
+                            target="_blank" class="subcert-link">Natural Language Processing With Attention Models</a>
+                    </h4>
                 </div>
             </div>
         </div>
@@ -92,22 +97,22 @@
             <div class="certification-header">
                 <img src="./assets/icl.png" alt="Mathematics for Machine Learning Specialization" class="cert-icon" />
                 <h3><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/0NE9K2AIJGMA"
-                        class="cert-link">Mathematics for Machine Learning Specialization</a></h3>
+                        target="_blank" class="cert-link">Mathematics for Machine Learning Specialization</a></h3>
             </div>
             <p><strong>Institution:</strong> Imperial College London & Coursera</p>
             <p><strong>Date:</strong> 12/2024</p>
             <div class="sub-certifications">
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/CR5B860QKFM2"
-                            class="subcert-link">Linear Algebra</a></h4>
+                            target="_blank" class="subcert-link">Linear Algebra</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/5J6L4I9WS1RP"
-                            class="subcert-link">Multivariate Calculus</a></h4>
+                            target="_blank" class="subcert-link">Multivariate Calculus</a></h4>
                 </div>
                 <div class="sub-cert-item">
                     <h4><a href="https://www.coursera.org/account/accomplishments/certificate/U4NQLGUWJO8Y"
-                            class="subcert-link">PCA</a></h4>
+                            target="_blank" class="subcert-link">PCA</a></h4>
                 </div>
             </div>
         </div>
@@ -116,7 +121,7 @@
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Data Analysis" class="cert-icon" />
                 <h3><a href="https://quera.org/media/public/quera_certificate/a8ae39534fda4c759b9a69e55bf03fa5.jpg"
-                        class="cert-link">Task-Oriented Course in Data Analysis With Python</a></h3>
+                        target="_blank" class="cert-link">Task-Oriented Course in Data Analysis With Python</a></h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 09/2024</p>
@@ -127,7 +132,8 @@
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Django" class="cert-icon" />
                 <h3><a href="https://quera.org/media/public/quera_certificate/26944e5f8c594b53936cf44d51dd2a34.jpg"
-                        class="cert-link">Professional Project-Oriented Course In Backend Development With Django</a>
+                        target="_blank" class="cert-link">Professional Project-Oriented Course In Backend Development
+                        With Django</a>
                 </h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
@@ -139,7 +145,7 @@
             <div class="certification-header">
                 <img src="./assets/quera.png" alt="Git" class="cert-icon" />
                 <h3><a href="https://quera.org/media/public/quera_certificate/0c7bc0856f2a4e5e8d780753021d8cf9.jpg"
-                        class="cert-link">Task-Oriented Course in Version Control With Git</a></h3>
+                        target="_blank" class="cert-link">Task-Oriented Course in Version Control With Git</a></h3>
             </div>
             <p><strong>Institution:</strong> Quera</p>
             <p><strong>Date:</strong> 07/2023</p>
@@ -150,7 +156,7 @@
         <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/tit.png" alt="MATLAB" class="cert-icon" />
-                <h3><a href="#" class="cert-link">MATLAB Certification</a></h3>
+                <h3><a href="#" target="_blank" class="cert-link">MATLAB Certification</a></h3>
             </div>
             <p><strong>Institution:</strong> Tehran Institute of Technology</p>
             <p><strong>Date:</strong> 04/2023</p>
@@ -161,7 +167,7 @@
         <div class="details-container">
             <div class="certification-header">
                 <img src="./assets/tit.png" alt="CATIA" class="cert-icon" />
-                <h3><a href="#" class="cert-link">CATIA Certification</a></h3>
+                <h3><a href="#" target="_blank" class="cert-link">CATIA Certification</a></h3>
             </div>
             <p><strong>Institution:</strong> Tehran Institute of Technology</p>
             <p><strong>Date:</strong> 04/2023</p>
@@ -170,8 +176,6 @@
 </section>
 
 <style>
-
-
     .certifications-title {
         font-size: 2.5rem;
         color: #333;
