--- a/components/certifications.html
+++ b/components/certifications.html
@@ -116,6 +116,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <br>
+    <div class="certifications-container">
         <!--Quera Data Analysis-->
         <div class="details-container">
             <div class="certification-header">
