--- a/components/projects.html
+++ b/components/projects.html
@@ -5,16 +5,11 @@
     <div class="about-containers">
       <div class="details-container color-container">
         <div class="article-container">
-          <img
-            src="./assets/project-1.png"
-            alt="Project 1"
-            class="project-img"
-          />
+          <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
         </div>
         <h2 class="certifications-sub-title project-title">Handwritten Digit Recognition</h2>
         <div class="btn-container">
-          <button
-            class="btn btn-color-2 project-btn"
+          <button class="btn btn-color-2 project-btn"
             onclick="window.open('https://github.com/HosseinTahami/Handwritten-Digit-Recognition', '_blank')">
             Github
           </button>
@@ -22,46 +17,68 @@
       </div>
       <div class="details-container color-container">
         <div class="article-container">
-          <img
-            src="./assets/project-2.png"
-            alt="Project 2"
-            class="project-img"
-          />
+          <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
         </div>
         <h2 class="certifications-sub-title project-title">Tweet Sentiment Analysis</h2>
         <div class="btn-container">
-          <button
-            class="btn btn-color-2 project-btn"
-            onclick="window.open('https://github.com/HosseinTahami/Tweet-Sentiment-Analysis-With-Logistic-Regression', '_blank')"
-          >
+          <button class="btn btn-color-2 project-btn"
+            onclick="window.open('https://github.com/HosseinTahami/Tweet-Sentiment-Analysis-With-Logistic-Regression', '_blank')">
             Github
           </button>
         </div>
       </div>
       <div class="details-container color-container">
         <div class="article-container">
-          <img
-            src="./assets/project-3.jpg"
-            alt="Project 3"
-            class="project-img"
-          />
+          <img src="./assets/project-3.jpg" alt="Project 3" class="project-img" />
         </div>
         <h2 class="certifications-sub-title project-title">Cafena: Online Coffee Shop</h2>
         <div class="btn-container">
-          <button
-            class="btn btn-color-2 project-btn"
-            onclick="window.open('https://github.com/HosseinTahami/Cafena', '_blank')"
-          >
+          <button class="btn btn-color-2 project-btn"
+            onclick="window.open('https://github.com/HosseinTahami/Cafena', '_blank')">
+            Github
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="about-containers">
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img src="./assets/project-4.png" alt="Project 4" class="project-img" />
+        </div>
+        <h2 class="certifications-sub-title project-title">Attention is All You Need <b><i><u><span style="color: #007bff">Implementation</span></u></i></b></h2>
+        <div class="btn-container">
+          <button class="btn btn-color-2 project-btn"
+            onclick="window.open('https://github.com/HosseinTahami/Attention-Is-All-You-Need', '_blank')">
+            Github
+          </button>
+        </div>
+      </div>
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img src="./assets/project-5.png" alt="Project 5" class="project-img" />
+        </div>
+        <h2 class="certifications-sub-title project-title">Music Stream Platform</h2>
+        <div class="btn-container">
+          <button class="btn btn-color-2 project-btn"
+            onclick="window.open('https://github.com/HosseinTahami/Music-Player', '_blank')">
+            Github
+          </button>
+        </div>
+      </div>
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img src="./assets/project-6.png" alt="Project 5" class="project-img" />
+        </div>
+        <h2 class="certifications-sub-title project-title">Task Manager</h2>
+        <div class="btn-container">
+          <button class="btn btn-color-2 project-btn"
+            onclick="window.open('https://github.com/HosseinTahami/Task-Manager', '_blank')">
             Github
           </button>
         </div>
       </div>
     </div>
   </div>
-  <img
-    src="./assets/arrow.png"
-    alt="Arrow icon"
-    class="icon arrow"
-    onclick="location.href='./#contact'"
-  />
+  <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
 </section>
