Update About Me

--- a/components/about.html
+++ b/components/about.html
@@ -7,20 +7,36 @@
     </div>
     <div class="about-details-container">
       <div class="about-containers">
-        <!-- <div class="details-container">
-          <img src="./assets/certifications.png" alt="certifications icon" class="icon" />
-          <h3>certifications</h3>
-          <p>2+ years <br />Python Development</p>
-        </div> -->
         <div class="details-container">
-          <img src="./assets/aut.png" alt="AUT icon" class="icon" style="width: 100px; height: 100px;" />
-          <h3>Education</h3>
+          <h1>Languages</h1>
+          <br>
+          <div class="sub-cert-item">
+            <h3>Persian</h3>
+            <p>Native</p>
+            <br>
+          </div>
+
+          <div class="sub-cert-item">
+            <h3>English</h3>
+            <br>
+            <h4>-IELTS:</h4>
+            <p>Overall 7.5</p>
+            <br>
+            <h4>-GRE:</h4>
+            <p>Overall 327</p>
+          </div>
+        </div>
+        <div class="details-container">
+          <h1>Education</h1>
+          <br>
+          <img src="./assets/aut.png" alt="AUT icon" class="icon" style="width: 70px; height: 70px;" />
           <p>
             2019 - 2024
           </p>
           <p>
-            B.Sc. in Aerospace Engineering from
-            <a href="https://aut.ac.ir/index.php?sid=1&slc_lang=en" style="color: blue;">Amirkabir University of Technology (Tehran
+            B.Sc. in Aerospace Engineering from <br>
+            <a href="https://aut.ac.ir/index.php?sid=1&slc_lang=en" style="color: blue;">Amirkabir University of
+              Technology <br>(Tehran
               Polytechnic)</a>.
           </p>
 
