--- a/components/about.html
+++ b/components/about.html
@@ -8,28 +8,37 @@
     <div class="about-details-container">
       <div class="about-containers">
         <div class="details-container">
-          <h1>Languages</h1>
+          <h2>Languages</h2>
           <br>
-          <div class="sub-cert-item">
-            <h3>Persian</h3>
-            <p>Native</p>
-            <br>
-          </div>
-
-          <div class="sub-cert-item">
-            <h3>English</h3>
-            <br>
-            <h4>-IELTS:</h4>
-            <p>Overall 7.5</p>
-            <br>
-            <h4>-GRE:</h4>
-            <p>Overall 327</p>
+          <div class="languages-list">
+            <div class="language-item">
+              <h3>Persian</h3>
+              <p class="proficiency">Native Speaker</p>
+            </div>
+            <hr>
+            <div class="language-item">
+              <h3>English</h3>
+              <div class="certifications">
+                <div class="cert-item">
+                  <span class="cert-name">IELTS:</span>
+                  <span class="scores">
+                    L: 8 | R: 8 | W: 6.5 | S: 6.5 | Overall: 7.5
+                  </span>
+                </div>
+                <div class="cert-item">
+                  <span class="cert-name">GRE:</span>
+                  <span class="scores">
+                    V: 157 | Q: 170 | W: 4.0 | O: 327
+                  </span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="details-container">
-          <h1>Education</h1>
+          <h2>Education</h2>
           <br>
-          <img src="./assets/aut.png" alt="AUT icon" class="icon" style="width: 70px; height: 70px;" />
+          <img src="./assets/aut.png" alt="AUT icon" class="icon" style="width: 80px; height: 80px;" />
           <p>
             2019 - 2024
           </p>
@@ -58,3 +67,47 @@
   </div>
   <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#certifications'" />
 </section>
+
+<style>
+  .languages-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .language-item {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .language-item h3 {
+    margin-bottom: 0.2rem;
+  }
+
+  .certifications {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .cert-item {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .cert-name {
+    font-weight: bold;
+    min-width: 60px;
+  }
+
+  .scores {
+    color: var(--text-color-secondary);
+  }
+
+  .proficiency {
+    color: var(--text-color-secondary);
+    font-style: italic;
+  }
+</style>
