Update Certifications Layout

--- a/components/certifications.html
+++ b/components/certifications.html
@@ -154,28 +154,31 @@
             <p><strong>Date:</strong> 07/2023</p>
         </div>
 
+        <br>
 
-        <!--MATLAB-->
-        <div class="details-container">
-            <div class="certification-header">
-                <img src="./assets/tit.png" alt="MATLAB" class="cert-icon" />
-                <h3><a href="#" target="_blank" class="cert-link">MATLAB Certification</a></h3>
+        <div class="certifications-container">
+
+            <!--MATLAB-->
+            <div class="details-container">
+                <div class="certification-header">
+                    <img src="./assets/tit.png" alt="MATLAB" class="cert-icon" />
+                    <h3><a href="#" target="_blank" class="cert-link">MATLAB Certification</a></h3>
+                </div>
+                <p><strong>Institution:</strong> Tehran Institute of Technology</p>
+                <p><strong>Date:</strong> 04/2023</p>
             </div>
-            <p><strong>Institution:</strong> Tehran Institute of Technology</p>
-            <p><strong>Date:</strong> 04/2023</p>
-        </div>
 
 
-        <!--CATIA-->
-        <div class="details-container">
-            <div class="certification-header">
-                <img src="./assets/tit.png" alt="CATIA" class="cert-icon" />
-                <h3><a href="#" target="_blank" class="cert-link">CATIA Certification</a></h3>
+            <!--CATIA-->
+            <div class="details-container">
+                <div class="certification-header">
+                    <img src="./assets/tit.png" alt="CATIA" class="cert-icon" />
+                    <h3><a href="#" target="_blank" class="cert-link">CATIA Certification</a></h3>
+                </div>
+                <p><strong>Institution:</strong> Tehran Institute of Technology</p>
+                <p><strong>Date:</strong> 04/2023</p>
             </div>
-            <p><strong>Institution:</strong> Tehran Institute of Technology</p>
-            <p><strong>Date:</strong> 04/2023</p>
         </div>
-    </div>
 </section>
 
 <style>
